		Timetable: added optional permission for parents to only view their children's timetables
		User Admin: fixed bug preventing some custom fields appearing when individual had multiple categories in multiple roles
		User Admin: fixed PHP Notice error caused when no additional roles chosen in user edit
		User Admin: added ability to restrict which roles can be assigned in Manage Users

v13.0.02
--------
	Security
		System: fixed PHP code execution vulnerability
		System: fixed infinite nested index reload bug

v13.0.01
--------
	Tweaks & Bug Fixes
		System: installer adjusted to provide compatibility with Softaculous
		System: fixed Resource tag issue in demo data
		Resources: fixed PHP notice in View Resources

v13.0.00
--------
	Headlines
		Automated Scope & Sequence documentation in Planner, based on Unit Planner
		Concept Explorer in Planner, based on Unit Planner concepts & keywords
		Attendance by class, plus generation of student attendance reports
		Messenger read receipts, in order to confirm receipt of and agreement to emails
		Improved student application workflow for siblings
		Translatability of additional modules
		New notification tray to improve visibility of notifications and other alerts
		Installation requirements checking

	Changes With Important Notices
		System: updated PHPMailer to v5.2.16, and switched to SMTP mailing (check that your server supports un-authenticated local SMTP relay, or set up SMTP in Third Party Settings)
		System: updated TinyMCE library to latest release (might require users to clear browser cache to load WYSIWYG)
		Staff: moved staff-facility assignment from Manage Facility to Manage Staff (current assignments will be lost)
		Data Updater: moved Data Updater management tools from User Admin to Data Updater
		Data Updater: moved Data Updater report from Students to Data Updater

	Significant Changes
		System: changed Primary Assessment Scale to Default Assessment Scale